--- a/package.json
+++ b/package.json
@@ -1,27 +1,50 @@
 {
-  "name": "proxynova",
+  "name": "@karindustries/proxynova",
   "version": "1.0.0",
   "description": "A scalable HTTP proxy server inspired by NGINX",
-  "main": "dist/index.js",
-  "author": "Arijit Kar",
+  "keywords": [
+    "proxy",
+    "server",
+    "nodejs",
+    "load-balancer"
+  ],
+  "homepage": "https://github.com/DemonicAK/proxynova#readme",
+  "bugs": {
+    "url": "https://github.com/DemonicAK/proxynova/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DemonicAK/proxynova.git"
+  },
   "license": "MIT",
-    "bin": {
+  "author": "Arijit Kar",
+  "type": "commonjs",
+  "main": "dist/index.js",
+  "bin": {
     "proxynova": "dist/index.js"
   },
-    "keywords": ["proxy", "server", "nodejs", "load-balancer"],
   "scripts": {
-    "start": "node dist/index --config config.yaml",
-    "build": "tsc -p .",
-    "dev": "tsc-watch  --onSuccess \"npm start\""
-  },
-  "devDependencies": {
-    "@types/node": "^22.10.2",
-    "tsc-watch": "^6.2.1",
-    "typescript": "^5.7.2"
+    "start": "node dist/index.js --config config.yaml",
+    "build": "babel src --out-dir dist --extensions \".ts\"",
+    "dev": "tsc-watch --onSuccess \"npm start\"",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "commander": "^12.1.0",
     "yaml": "^2.6.1",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "@types/node": "^22.10.2",
+    "babel-loader": "^9.2.1",
+    "tsc-watch": "^6.2.1",
+    "typescript": "^5.7.2"
   }
 }
