--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,5 @@
-# Node.js
+# add node modules to gitignore
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
 
-# TypeScript
+# add dist folder to gitignore
 dist/
-build/
-*.tsbuildinfo
-
-# Logs
-logs/
-*.log
-*.log.*
-
-# IDEs
-.vscode/
-.idea/
-.DS_Store
-
-# OS Files
-Thumbs.db
-
-# Env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Coverage reports
-coverage/
-*.lcov
-
-# Misc
-tmp/
-temp/
